--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
     gap: 2vw;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
 }
 .hd__section {
     width: 6vw;
@@ -28,16 +32,16 @@
     align-items: center;
 }
 #home {
-    background-color: #888556ca;
+    background-color: #53512bca;
 }
 #about {
-    background-color: #888556ca;
+    background-color: #53512bca;
 }
 #projects {
-    background-color: #888556ca;
+    background-color: #53512bca;
 }
 #contact {
-    background-color: #888556ca;
+    background-color: #53512bca;
 }
 /*------------------------main--------------------------*/
 #main {
@@ -47,6 +51,11 @@
     /*display: flex;
     justify-content: center;
     flex-direction: column;*/
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+    justify-content: center;
+    flex-direction: column;
+
 }
 #home-section {
     width: 100vw;
@@ -61,43 +70,64 @@
     flex-direction: column;
 }
 #home-section p {
-    font-size: 4rem;
+    font-size: 5rem;
     font-weight: bold;
     color: #47401a;
 }
 #home-section h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: bold;
     color: #47401a;
     text-align: center;
     margin-top: 10vh;
 }
 #about-me {
-   width: 100vw;
-   height: 60vh;
-    display: flex;
-     flex-direction: column; 
-    align-items: center;
+    width: 90vw;
+    height: 80vh;
+    padding: 5vh 8vw;
+    background-color: hsla(57, 26%, 68%, 0.792);
 }
-#about-me p1{
-    font-size: 4rem;
-    font-weight: bold;
-    color: #47401a;
-    margin-bottom: 2vh;
-}
-#about-me h1 {
-    font-size: 3rem;
-    font-weight: bold;
-    color: #47401a;
-    margin-bottom: 2vh;
-    margin-top: 10vh;
-}
-#about-me p {
-    font-size: 1.7rem;
-    font-weight: bold;
-    color: #47401a;
+
+.about-title {
     text-align: center;
+    font-size: 5rem;
+    font-weight: bold;
+    color: #47401a;
+    margin-bottom: 5vh;
+    margin-top: 5vh;
 }
+
+.about-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* عمودين */
+    align-items: center;
+    gap: 3vw;
+}
+
+.about-text h1 {
+    font-size: 3.5rem;
+    font-weight: bold;
+    font-style: italic;
+    color: #47401a;
+    margin-bottom: 2vh;
+}
+
+.about-text p {
+    font-size: 2.5rem;
+    font-style: italic;
+    font-weight: bold;
+    font-weight: 500;
+    color: #47401a;
+    line-height: 1.6;
+}
+
+.about-img img {
+    width: 100%;
+    max-width: 400px;
+    border-radius: 30%;
+    justify-self: center;
+}
+
 
 /*------------------------footer--------------------------*/
 #footer {
@@ -108,6 +138,10 @@
     gap: 1vw;
     /* justify-content: center; */
      align-items: center; 
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
 }
 .footer__section {
     background-color: #47401a;
