--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,14 @@
     margin: 0;
     padding: 0;
 }
+
 /*------------------------container--------------------------*/
 #container {
     width: 100vw;
     height: 100vh;
     background-color: white;
 }
+
 /*------------------------header--------------------------*/
 #header {
     width: 100vw;
@@ -23,31 +25,37 @@
     left: 0;
     z-index: 100;
 }
+
 .hd__section {
     width: 6vw;
     height: 6vh;
     background-color: #766626a8;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
 }
+
 #home {
     background-color: #53512bca;
 }
+
 #about {
     background-color: #53512bca;
 }
+
 #projects {
     background-color: #53512bca;
 }
+
 #contact {
     background-color: #53512bca;
 }
+
 /*------------------------main--------------------------*/
 #main {
     width: 100vw;
     background-color: hsla(57, 26%, 68%, 0.792);
-   
+
     /*display: flex;
     justify-content: center;
     flex-direction: column;*/
@@ -60,7 +68,7 @@
 #home-section {
     width: 100vw;
     height: 85vh;
-    background-image:url(../images/background.jpg) ;
+    background-image: url(../images/background.jpg);
     background-repeat: no-repeat;
     background-size: 100vw 85vh;
     display: flex;
@@ -82,13 +90,12 @@
     margin-top: 10vh;
 }
 #about-me {
-    width: 90vw;
-    height: 80vh;
+    width: 100vw;
+    height: 85vh;
     padding: 5vh 8vw;
     background-color: hsla(57, 26%, 68%, 0.792);
 }
-
-.about-title {
+#about-title h2 {
     text-align: center;
     font-size: 5rem;
     font-weight: bold;
@@ -99,11 +106,11 @@
 
 .about-content {
     display: grid;
-    grid-template-columns: 1fr 1fr; /* عمودين */
+    grid-template-columns: 1fr 1fr;
+    /* عمودين */
     align-items: center;
     gap: 3vw;
 }
-
 .about-text h1 {
     font-size: 3.5rem;
     font-weight: bold;
@@ -111,7 +118,6 @@
     color: #47401a;
     margin-bottom: 2vh;
 }
-
 .about-text p {
     font-size: 2.5rem;
     font-style: italic;
@@ -120,13 +126,119 @@
     color: #47401a;
     line-height: 1.6;
 }
-
 .about-img img {
     width: 100%;
     max-width: 400px;
     border-radius: 30%;
     justify-self: center;
 }
+#projects-section {
+    width: 100vw;
+    padding: 20vh 8vw;
+    background-color: hsla(56, 47%, 76%, 0.792);
+}
+.projects-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* عمودين */
+    align-items: center;
+    gap: 2vw;
+}
+.project {
+    width: 35vw;
+    height: 55vh;
+    background-color: #766626a8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.project h3 {
+    font-size: 2rem;
+    font-weight: bold;
+    font-style: italic;
+    color: #47401a;
+    margin-bottom: 2vh;
+}
+.project video {
+    width: 30vw;
+    height: 30vh;
+    object-fit: cover;  
+    border-radius: 10px;
+    cursor: pointer;
+}
+video:fullscreen {
+    width: 100vw;
+    height: 100vh;
+    object-fit: contain;  
+}
+.project p {
+    font-size: 1.5rem;
+    font-style: italic;
+    font-weight: bold;
+    font-weight: 500;
+    color: #47401a;
+    line-height: 1.6;
+}
+.project button {
+    width: 10vw;
+    height: 5vh;
+    background-color: #47401a;
+    color: #fff;
+    
+    border-radius: 10px;
+    cursor: pointer;
+}#contact-section {
+    width: 100vw;
+    height: 85vh;
+    padding: 10vh 8vw;
+    background-color: #f6eac2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.about-title {
+    text-align: center;
+    font-size: 2rem;
+    color: #5c4a2d;
+    margin-bottom: 2rem;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+.contact-box {
+    background: url("../images/contact me.png") no-repeat center/contain; /* الصورة خلفية */
+    width: 80vw;
+    height: 100vh;
+    display: flex;
+    background-size: 85vw 85vh;
+    align-items: center;
+    justify-content: flex-end; /* يخلي النص يجي على اليمين */
+}
+
+.contact-text {
+    width: 45vw;
+    text-align: left;
+}
+
+.contact-text h1 {
+    font-size: 4rem;
+    font-weight: bold;
+    color: #4b3a1f;
+    padding:  2vh 4vw;
+
+  
+}
+
+.contact-text p {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    padding: 0vh 4vw;
+    font-weight: bold;
+    font-style: italic;
+    color: #3d2f1b;
+}
+
 
 
 /*------------------------footer--------------------------*/
@@ -137,24 +249,27 @@
     display: flex;
     gap: 1vw;
     /* justify-content: center; */
-     align-items: center; 
+    align-items: center;
     position: fixed;
     bottom: 0;
     left: 0;
     z-index: 100;
 }
+
 .footer__section {
     background-color: #47401a;
 
 }
+
 #creater-section {
     background-color: #47401a;
-     width: 50vw;
+    width: 50vw;
     height: 4vh;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
+
 #linkedin {
     width: 4vw;
     height: 4vh;
@@ -162,11 +277,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
     img {
         width: 3vw;
         height: 4vh;
     }
 }
+
 #github {
     width: 4vw;
     height: 4vh;
@@ -174,6 +291,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
     img {
         width: 4vw;
         height: 4vh;
